--- a/index3.html
+++ b/index3.html
@@ -36,7 +36,6 @@
 			background-color:#0A0A0A;
 		}
 		body, main, div {
-			background-color:white;
 			cursor:auto;
 		}
 		html, body, main {
@@ -45,10 +44,12 @@
 			overflow:hidden;
 		}
 		html, body, main, div, section, img, h1 {
-			margin:0;
-			padding:0;
 			z-index:0;
 			font-family:HelveticaNeue-Thin, Helvetica, Arial;
+		}
+		html, body, main, div, section, img, h1, iframe {
+			margin:0;
+			padding:0;
 		}
 		section {
 			width:100%;
@@ -59,6 +60,11 @@
 		.icon:hover {
 			opacity:0.8;
 			cursor:pointer;
+		}
+		.center {
+			margin:0px auto;
+			text-align:center;
+			max-width:1000px;
 		}
 		
 		/* -------------------- --------------- -------------------- */
@@ -73,6 +79,8 @@
 			border-radius:5px 0px 0px 5px;
 			background-color:black;
 			z-index:2;
+			-webkit-transition:right 1s;
+			transition:right 1s;
 		}
 		.sidebarIcon {
 			margin:7px 7px 0px 7px;
@@ -162,11 +170,51 @@
 			background:#0A0A0A url("img/DrexelHyperloopExpo.png") no-repeat center center;
 			background-size:cover;
 		}
+		#tint1 {
+			height:100%;
+			width:100%;
+			background:linear-gradient(141deg,rgba(15,184,173,0.8) 0%,rgba(31,200,219,0.8) 51%,rgba(44,181,232,0.8) 75%);
+		}
+		#tint2 {
+			height:100%;
+			width:100%;
+			background:linear-gradient(141deg,rgba(44,181,232,0.8),rgba(95,44,130,0.8));
+		}
+		#tint3 {
+			height:100%;
+			width:100%;
+			background:linear-gradient(141deg,rgba(95,44,130,0.8),rgba(236,111,102,0.8));
+		}
+		#contentPage1 {
+			position:relative;
+			top:0;
+			-webkit-transition:top 1s;
+			transition:top 1s;
+		}
 		.page {
 			position:absolute;
 			top:0;
+			text-align:center;
 			-webkit-transition:left 1.5s;
 			transition:left 1.5s;
+		}
+		.video {
+			position:relative;
+			float:left;
+ 			width:50%;
+ 			max-width:500px;
+		}
+		#showVideo {
+			position:relative;
+			height:50px;
+			width:100%;
+			color:black;
+			background:linear-gradient(141deg,rgba(125,125,125,0.9) 0%,rgba(150,150,150,0.9) 51%,rgba(225,225,225,0.9) 100%);
+		}
+		#showVideo p {
+			margin-top:0px;
+			padding-top:8px;
+			font-size:30px;
 		}
 	</style>
 </head>
@@ -178,7 +226,7 @@
 	<main>
 		<div>
 			<!--=============== ======= ===============-->
-		    <!--=============== Sidebar ===============-->
+			<!--=============== Sidebar ===============-->
 			<!--=============== ======= ===============-->
 			<section id="sidebar">
 				<a href="https://www.facebook.com/freddy.wachter" target="_blank">	
@@ -193,17 +241,33 @@
 			</section>
 			
 			<!--=============== ===== ===============-->
-		    <!--=============== Pages ===============-->
+			<!--=============== Pages ===============-->
 			<!--=============== ===== ===============-->
 			<section id="intro" class="page">
 				<p id="introText">Frederick Wachter</p>
 			</section>
-			<section id="page1" class="page"></section>
-			<section id="page2" class="page"></section>
-			<section id="page3" class="page"></section>
+			<section id="page1" class="page">
+				<div id="tint1">
+					<div id="contentPage1" class="center">
+						<iframe class="video" src="https://www.youtube.com/embed/xV6nHvwKfFg" frameborder="0" allowfullscreen></iframe>
+						<iframe class="video" src="https://www.youtube.com/embed/2KfogkkdEoY" frameborder="0" allowfullscreen></iframe>
+						<div id="videoSpacer"></div>
+						<div id="showVideo">
+							<p id="hideShowVideo_Page1">Hide Videos</p>
+						</div>
+
+					</div>
+				</div>
+			</section>
+			<section id="page2" class="page">
+				<div id="tint3">
+				</div>
+			</section>
+			<section id="page3" class="page">
+			</section>
 			
 			<!--=============== ====== ===============-->
-		    <!--=============== Footer ===============-->
+			<!--=============== Footer ===============-->
 			<!--=============== ====== ===============-->
 			<div id="logo">
 				<img id="mainLogo" src="img/Logo_Large.png" width="250px"/>
@@ -223,6 +287,8 @@
 		/* -------------------- --------- -------------------- */
 		var pageIndex = 0; // indicated the current page of the user
 		var totalPages = $(".footerButton").length; // indicates the amount of available pages on the webpage
+		var videoDisplayFlag_Page1 = 0; // indicates if videos should be displayed on page 1
+		var sidebarDisplayFlag = 1; // indicates if the sidebar should be displayed
 
 		/* -------------------- ------------- -------------------- */
 		/* -------------------- Window Resize -------------------- */
@@ -241,6 +307,9 @@
 			});
 
 			offsetPages(pageIndex,windowWidth);
+			setIconLocation(null,pageIndex,1);
+			adjustVideoSize_Page1(windowWidth);
+			toggleVideoDisplay(windowWidth);
 		}
 
 		/* -------------------- -------- -------------------- */
@@ -254,14 +323,19 @@
 				});
 			}
 		}
-		function toggleLogoPosition(previousIndex,currentIndex) {
-			if ((previousIndex == 0) && (pageIndex > 0)) {
+		function setIconLocation(previousIndex,currentIndex,windowResize) {
+			if ((windowResize == 1) && (currentIndex > 0)) {
 				var windowHeight = $(window).height();
 				$("#logo").css({
-					"margin-left":"-50px",
-					"margin-top":"-75px",
-					"top":windowHeight - 50 + "px",
+					"top":windowHeight - 50 + "px"
+				});
+			} else if ((previousIndex == 0) && (pageIndex > 0)) {
+				var windowHeight = $(window).height();
+				$("#logo").css({
 					"box-shadow":"none",
+					"margin-top":"-75px",
+					"margin-left":"-50px",
+					"top":windowHeight - 50 + "px",
 					"background-color":"rgba(0,0,0,0)"
 				});
 				$("#mainLogo").css({
@@ -269,10 +343,10 @@
 				});
 			} else if ((previousIndex > 0) && (pageIndex == 0)) {
 				$("#logo").css({
-					"margin-left":"",
-					"margin-top":"",
 					"top":"",
 					"box-shadow":"",
+					"margin-top":"",
+					"margin-left":"",
 					"background-color":""
 				});
 				$("#mainLogo").css({
@@ -288,6 +362,88 @@
 			$(".footerButton").eq(currentIndex).addClass("active");
 			$(".footerButton").eq(currentIndex).removeClass("notActive");
 			$(".footerButton").eq(currentIndex).removeClass("icon");
+
+			setIconLocation(previousIndex,currentIndex,0);
+		}
+		function adjustVideoSize_Page1(windowWidth) {
+			if (windowWidth <= 1000) {
+				$(".video").css({
+					"height":((windowWidth / 2) / 1.333) + "px"
+				});
+				$("#videoSpacer").css({
+					"height":((windowWidth / 2) / 1.333) + "px"
+				});
+				$("#showVideo").css({
+					"border-radius":"0px"
+				});
+			} else {
+				$(".video").css({
+					"height":"375px"
+				});
+				$("#videoSpacer").css({
+					"height":"375px"
+				});
+				$("#showVideo").css({
+					"border-radius":"0px 0px 5px 5px"
+				});
+			}
+		}
+		function toggleVideoDisplay(windowWidth) {
+			var previousSidebarDisplayFlag = sidebarDisplayFlag;
+			if (videoDisplayFlag_Page1 == 0) {
+				var topAdjustment = 0;
+				if (windowWidth < 1000) {
+					topAdjustment = ((-windowWidth / 2) / 1.333);
+				} else if (windowWidth >= 1000) {
+					topAdjustment = -375;
+				}
+				$("#contentPage1").css({
+					"top":topAdjustment + "px"
+				});
+				$("#hideShowVideo_Page1").text("Show Videos");
+				sidebarDisplayFlag = 1;
+			} else if (videoDisplayFlag_Page1 == 1) {
+				if (windowWidth < 1000) {
+					sidebarDisplayFlag = 0;
+				} else if (windowWidth >= 1000) {
+					sidebarDisplayFlag = 1;
+				}
+				$("#contentPage1").css({
+					"top":""
+				});
+				$("#hideShowVideo_Page1").text("Hide Videos");
+			}
+
+			sidebarDisplayFlag = pageFlagReset(sidebarDisplayFlag);
+			if (previousSidebarDisplayFlag != sidebarDisplayFlag) {
+				toggleSidebarDisplay();
+			}
+		}
+		function toggleSidebarDisplay() {
+			if (sidebarDisplayFlag == 0) {
+				$("#sidebar").css({
+					"right":"-64px"
+				});
+			} else if (sidebarDisplayFlag == 1) {
+				$("#sidebar").css({
+					"right":""
+				});
+			} else {
+				alert("Error (3): Flag was set to incorrect value.");
+			}
+		}
+		function pageFlagReset(sidebarDisplayFlag) {
+			if (pageIndex != 1) {
+				return 1;
+			} else {
+				var windowWidth = $(window).width();
+				if ((windowWidth <= 1000) && (videoDisplayFlag_Page1 == 1)) {
+					return 0;
+				} else {
+					return 1;
+				}
+					
+			}
 		}
 
 		/* -------------------- --------------- -------------------- */
@@ -301,7 +457,6 @@
 			if (previousIndex != pageIndex) {
 				offsetPages(pageIndex,windowWidth);
 				toggleActivePage(previousIndex,pageIndex);
-				toggleLogoPosition(previousIndex,pageIndex);
 
 				if (pageIndex != 0) {
 					$("#introText").css({
@@ -312,9 +467,27 @@
 						"opacity":"1"
 					});
 				} else {
-					alert("Error (1): Current page index is incorrect.")
+					alert("Error (1): Current page index is incorrect.");
 				}
 			}
+
+			displaySidebar = pageFlagReset(sidebarDisplayFlag);
+			if (displaySidebar != sidebarDisplayFlag) {
+				sidebarDisplayFlag = displaySidebar;
+				toggleSidebarDisplay();
+			}
+		});
+		$("#showVideo").click(function() {
+			if (videoDisplayFlag_Page1 == 0) {
+				videoDisplayFlag_Page1 = 1;
+			} else if (videoDisplayFlag_Page1 == 1) {
+				videoDisplayFlag_Page1 = 0;
+			} else {
+				alert("Error (2): Flag was set to incorrect value.");
+			}
+
+			var windowWidth = $(window).width();
+			toggleVideoDisplay(windowWidth);
 		});
 	</script>
 	
