Removed DS_Store due to conflict
Removed DS_Store since a confict occurred when trying to setup git with Drexel personal webpage. Also added Github logo to website, but was previously committed and not pushed

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<a href="https://www.linkedin.com/in/frederickwachter" target="_blank">
 					<img class="sidebarIcon icon" src="icons/LinkedIn.png"/>
 				</a>
+				<a href="https://www.github.com/FWachter" target="_blank">
+					<img class="sidebarIcon icon" src="icons/Github.png"/>
+				</a>
 			</section>
 			
 			<!--=============== ===== ===============-->
