--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- 
 PROGRAMMER: Frederick Wachter
 DATE CREATED: 2016-04-13
-LAST MODIFIED: 2016-05-16
+LAST MODIFIED: 2016-05-28
 PURPOSE: Engineering Portfolio of Frederick Wachter
 CONTACT INFO: wachterfreddy@gmail.com
 -->
@@ -57,12 +57,15 @@ CONTACT INFO: wachterfreddy@gmail.com
 						<iframe class="video" src="https://www.youtube.com/embed/xV6nHvwKfFg" frameborder="0" allowfullscreen></iframe>
 						<iframe class="video" src="https://www.youtube.com/embed/2KfogkkdEoY" frameborder="0" allowfullscreen></iframe>
 						<div id="videoSpacer"></div>
-						<div id="showVideo">
+						<div id="showVideo" class="icon">
 							<p id="hideShowVideo_Page1" class="icon">Hide Videos</p>
 						</div>
 
 						<div class="job">
-							<div id="background1_job" class="background"></div>
+							<div class="jobImage">
+								<div id="background1_job" class="background"></div>
+							</div>
+							<p class="jobTitle">Intern at Autonomous Systems Lab ETHZ</p>
 							<div class="jobDescription">
 								<p class="largeText left">Autonomous Systems Lab</p>
 								<p class="largeText right">Zurich, Switzerland</p>
@@ -73,7 +76,10 @@ CONTACT INFO: wachterfreddy@gmail.com
 							</div>
 						</div>
 						<div class="job">
-							<div id="background2_job" class="background"></div>
+							<div class="jobImage">
+								<div id="background2_job" class="background"></div>
+							</div>
+							<p class="jobTitle">Intern at Production Technology West</p>
 							<div class="jobDescription">
 								<p class="largeText left">Production Technology West</p>
 								<p class="largeText right">Trollhattan, Sweden</p>
@@ -90,6 +96,33 @@ CONTACT INFO: wachterfreddy@gmail.com
 			</section>
 			<section id="page2" class="page">
 				<div id="tint3">
+					<div id="pageContent" class="center">
+						<div class="spacer"></div>
+						<div class="project">
+							<div class="projectImage"></div>
+							<div class="projectDescription">
+								<p>Project Title</p>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage"></div>
+							<div class="projectDescription">
+								<p>Project Title</p>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage"></div>
+							<div class="projectDescription">
+								<p>Project Title</p>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage"></div>
+							<div class="projectDescription">
+								<p>Project Title</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section id="page3" class="page">
@@ -107,6 +140,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
+				<p id="lastModified">Last Updated: May 30th, 2016</p>
 			</section>
 		<div>
 	</main>
