Commit needed to change branch
Not sure what was modified

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: May 30th, 2016</p>
+				<p id="lastModified">Last Updated: May 31st, 2016</p>
 			</section>
 		<div>
 	</main>
