Added in Helvetica Neue Condensed Bold font, performed minor code formatting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!-- 
 PROGRAMMER: Frederick Wachter
 DATE CREATED: 2016-04-13
-LAST MODIFIED: 2016-05-31
 PURPOSE: Engineering Portfolio of Frederick Wachter
 CONTACT INFO: wachterfreddy@gmail.com
 -->
@@ -68,9 +67,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="jobTitle">Intern at Autonomous Systems Lab ETHZ</p>
 							<div class="jobDescription">
 								<p class="largeText">Autonomous Systems Laboratory</p>
-								<p class="mediumText">Research Engineer at Swiss Federal Institute of Technology</p>
-								<p class="mediumText">March 2016 to September 2016</p>
-								<p class="smallText">Developed ROS driver to interface with an ABB YuMi robot.
+								<p class="smallText">Robotics and Development Engineer at Swiss Federal Institute of Technology</p>
+								<p class="smallText">March 2016 to September 2016</p>
+								<p class="mediumText">Developed ROS driver to interface with an ABB YuMi robot.
 									Also developed the interface between YuMi and a robot manipulation software
 									called MoveIt! in C++. All contributions are public on GitHub.</p>
 							</div>
@@ -82,9 +81,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="jobTitle">Intern at Production Technology West</p>
 							<div class="jobDescription">
 								<p class="largeText">Production Technology West</p>
-								<p class="mediumText">Research Engineer at University West (Hogskolan Vast)</p>
-								<p class="mediumText">September 2014 to March 2015</p>
-								<p class="smallText">Developed algorithms to charaterize defects within 
+								<p class="smallText">Research Engineer at University West (Hogskolan Vast)</p>
+								<p class="smallText">September 2014 to March 2015</p>
+								<p class="mediumText">Developed algorithms to charaterize defects within 
 									welds and automaticlly find them within image sequences. Also developed 
 									a boroscope for an IR camera to allow the camera to take images in small 
 									confined spaces.</p>
@@ -104,9 +103,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="projectTitle">Drexel Hyperloop</p>
 							<div class="projectDescription">
 								<p class="largeText">Drexel Hyperloop Team</p>
-								<p class="mediumText">Steering Committee Member and Sponsorship Head</p>
-								<p class="mediumText">June 2015 to Present</p>
-								<p class="smallText">Primarily involved in determining team direction and 
+								<p class="smallText">Steering Committee Member and Sponsorship Head</p>
+								<p class="smallText">June 2015 to Present</p>
+								<p class="mediumText">Primarily involved in determining team direction and 
 									facilitated sponsorships. Developed the original organizational structure,
 									Interfaced between university advisors, university staff, and sponsors. 
 									Raised over $65,000 as sponsorship head.</p>
@@ -119,9 +118,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="projectTitle">LIT</p>
 							<div class="projectDescription">
 								<p class="largeText">Light Interactive Technology</p>
-								<p class="mediumText">Programmer and Team Member</p>
-								<p class="mediumText">March 2016 to Present</p>
-								<p class="smallText">Developed a simulation in MATLAB that displays 3D contours
+								<p class="smallText">Programmer and Team Member</p>
+								<p class="smallText">March 2016 to Present</p>
+								<p class="mediumText">Developed a simulation in MATLAB that displays 3D contours
 									using a discrete array of circular objects dangling from a motor at the top
 									of the structure. This simulation was primarily used as a prototype of the 
 									full system and generated data used to build an animation of the product.</p>
@@ -134,9 +133,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="projectTitle">THOR</p>
 							<div class="projectDescription">
 								<p class="largeText">Three Omni-Wheeled Robot</p>
-								<p class="mediumText">Programmer</p>
-								<p class="mediumText">March 2015 to September 2015</p>
-								<p class="smallText">Wrote controller for a three omni-wheeled robot for
+								<p class="smallText">Programmer</p>
+								<p class="smallText">March 2015 to September 2015</p>
+								<p class="mediumText">Wrote controller for a three omni-wheeled robot for
 									interfacing with a remote controller and encorders in Arduino C. Learned
 									how to use PID and interrupts using an Arduino and dealing with remote 
 									controllers, encorder feedback, and data smoothing techniques.</p>
@@ -149,9 +148,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<p class="projectTitle">Micromouse</p>
 							<div class="projectDescription">
 								<p class="largeText">Micromouse</p>
-								<p class="mediumText">Programmer</p>
-								<p class="mediumText">June 2016 to Present</p>
-								<p class="smallText">Developed structure in MATLAB that allows for Micromouse maps
+								<p class="smallText">Programmer</p>
+								<p class="smallText">June 2016 to Present</p>
+								<p class="mediumText">Developed structure in MATLAB that allows for Micromouse maps
 									to be graphically created by the user. This structure is integrated with the 
 									A* algorithm which can be run on the map in order to determine the shortest 
 									path from the start to end location.</p>
@@ -201,3 +200,5 @@ CONTACT INFO: wachterfreddy@gmail.com
 	<script type="text/javascript" src="src/scripts/script.js"></script>
 	
 </body>
+
+
