Added resume button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 -->
 
 <head>
-	<title>Frederick Wachter Engineering Portfolio</title>
+	<title>Engineering Portfolio</title>
 	<link rel="shorcut icon" href="icons/Logo_Small.png"/>
 	<link rel="stylesheet" type="text/css" href="src/styles/style.css"/>
 	
@@ -177,6 +177,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
 						</form>
 					</div>
+					<a href="http://goo.gl/nPiFtm" target="_blank" id="resumeButton">Click for Resume</a>
 				</div>
 			</section>
 			
@@ -192,7 +193,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: August 23rd, 2016</p>
+				<p id="lastModified">Last Updated: August 25th, 2016</p>
 			</section>
 		<div>
 	</main>
