--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
 						</form>
 					</div>
-					<a href="http://goo.gl/nPiFtm" target="_blank" id="resumeButton">Click for Resume</a>
+					<a href="http://goo.gl/ob1tiD" target="_blank" id="resumeButton">Click for Resume</a>
 				</div>
 			</section>
 			
