Removed flashing effect on projects

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 									full system and generated data used to build an animation of the product.</p>
 							</div>
 							<div class="linksBar">
+								<a href="https://www.youtube.com/watch?v=ZH-BBwkH94c" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
 								<a href="https://www.youtube.com/watch?v=zyfIvhx6BbY" target="_blank">
 									<span class="icon-youtube"></span>
 								</a>
