Improved sidebar displaying

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 	<link rel="stylesheet" type="text/css" href="src/styles/style.css"/>
 	
 	<meta name="description" content="Official website for the portfolio of  Frederick Wachter"/>
-	<meta name="keywords" content="Frederick Wachter, Drexel University, Drexel Engineering"/>
+	<meta name="keywords" content="Frederick Wachter, Drexel University, Drexel Engineering, Drexel, Mechanical Engineering"/>
 	<meta name="author" content="Frederick Wachter"/>
 	<!--<meta name="google-site-verification" content=""/>-->
 	
