--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
 						</form>
 					</div>
-					<a href="http://goo.gl/jRl5hg" target="_blank" id="resumeButton">Click for Resume</a>
+					<a href="src/documents/WachterFrederick_EngrResume.pdf" id="resumeButton" download>Click for Resume</a>
 				</div>
 			</section>
 			
