Changed projects order

--- a/index.html
+++ b/index.html
@@ -312,29 +312,6 @@ CONTACT INFO: wachterfreddy@gmail.com
 						</div>
 						<div class="project">
 							<div class="projectImage">
-								<div id="project_background_STAR" class="background"></div>
-							</div>
-							<p class="projectTitle">Manufacturing of Cementitious Vessels</p>
-							<div class="projectDescription">
-								<p class="largeText">Automated Manufacturing of Cementitious Vessels</p>
-								<p class="smallText">Researcher</p>
-								<p class="smallText">June 2014 to September 2014</p>
-								<p class="mediumText">As a researcher in STAR (Students Tackling Advanced Research) 
-									research program at Drexel, I worked with Dr. Joseph Martin to look into an
-									automated concrete spraying process for cementitious vessels to be used by the
-									Drexel Concrete Canoe Team.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://www.youtube.com/watch?v=a4jy9IXZZiI" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/automated-manufacturing-of-cementitious-vessels" target="_blank">
-									<span class="icon-info"></span>
-								</a>
-							</div>
-						</div>
-						<div class="project">
-							<div class="projectImage">
 								<div id="project_background_Hexcopter" class="background"></div>
 							</div>
 							<p class="projectTitle">ASME Student Design Compeitition</p>
@@ -362,29 +339,6 @@ CONTACT INFO: wachterfreddy@gmail.com
 						</div>
 						<div class="project">
 							<div class="projectImage">
-								<div id="project_background_Mead" class="background"></div>
-							</div>
-							<p class="projectTitle">ASCE Mead Paper Competition 2014</p>
-							<div class="projectDescription">
-								<p class="largeText">ASCE Mead Paper Competition 2014</p>
-								<p class="smallText">Presenter</p>
-								<p class="smallText">April 12th, 2015</p>
-								<p class="mediumText">For the 2014 ASCE Concrete Canoe Region 2 competition, I competed
-									in the ASCE Mead Technical Paper Competition whose goal is to solve or analyze a previous,
-									current, or future civil engineering problem. The submission was in the form of a paper,
-									which is then presented at the regional competition. I placed 2nd at this competition</p>
-							</div>
-							<div class="linksBar">
-								<a href="http://www.asce.org/mead-student/">
-									<span class="icon-desktop"></span>
-								</a>
-								<a href="http://drexel.edu/cae/news-events/news/2014/April/2014-4-18%20Concrete%20Canoe%20Mid_Atlantic%20Competition/">
-									<span class="icon-newspaper"></span>
-								</a>
-							</div>
-						</div>
-						<div class="project">
-							<div class="projectImage">
 								<div id="project_background_MATLAB" class="background"></div>
 							</div>
 							<p class="projectTitle">MATLAB GUI's</p>
@@ -399,6 +353,52 @@ CONTACT INFO: wachterfreddy@gmail.com
 							<div class="linksBar">
 								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/recreating-games-in-matlab">
 									<span class="icon-info"></span>
+								</a>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage">
+								<div id="project_background_STAR" class="background"></div>
+							</div>
+							<p class="projectTitle">Manufacturing of Cementitious Vessels</p>
+							<div class="projectDescription">
+								<p class="largeText">Automated Manufacturing of Cementitious Vessels</p>
+								<p class="smallText">Researcher</p>
+								<p class="smallText">June 2014 to September 2014</p>
+								<p class="mediumText">As a researcher in STAR (Students Tackling Advanced Research) 
+									research program at Drexel, I worked with Dr. Joseph Martin to look into an
+									automated concrete spraying process for cementitious vessels to be used by the
+									Drexel Concrete Canoe Team.</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://www.youtube.com/watch?v=a4jy9IXZZiI" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/automated-manufacturing-of-cementitious-vessels" target="_blank">
+									<span class="icon-info"></span>
+								</a>
+							</div>
+						</div>
+						<div class="project">
+							<div class="projectImage">
+								<div id="project_background_Mead" class="background"></div>
+							</div>
+							<p class="projectTitle">ASCE Mead Paper Competition 2014</p>
+							<div class="projectDescription">
+								<p class="largeText">ASCE Mead Paper Competition 2014</p>
+								<p class="smallText">Presenter</p>
+								<p class="smallText">April 12th, 2014</p>
+								<p class="mediumText">For the 2014 ASCE Concrete Canoe Region 2 competition, I competed
+									in the ASCE Mead Technical Paper Competition whose goal is to solve or analyze a previous,
+									current, or future civil engineering problem. The submission was in the form of a paper,
+									which is then presented at the regional competition. I placed 2nd at this competition</p>
+							</div>
+							<div class="linksBar">
+								<a href="http://www.asce.org/mead-student/">
+									<span class="icon-desktop"></span>
+								</a>
+								<a href="http://drexel.edu/cae/news-events/news/2014/April/2014-4-18%20Concrete%20Canoe%20Mid_Atlantic%20Competition/">
+									<span class="icon-newspaper"></span>
 								</a>
 							</div>
 						</div>
@@ -426,6 +426,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 								</a>
 								<a href="http://du2014-grp940-07.blogspot.se/">
 									<span class="icon-blog"></span>
+								</a>
+								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy">
+									<span class="icon-document"></span>
 								</a>
 							</div>
 						</div>
@@ -489,7 +492,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: September 14th, 2016</p>
+				<p id="lastModified">Last Updated: October 5thth, 2016</p>
 			</section>
 		<div>
 	</main>
