Fixed error in late updated section

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ CONTACT INFO: wachterfreddy@gmail.com
 				<div class="footerButton icon notActive"></div>
 				<div class="footerButton icon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 5thth, 2016</p>
+				<p id="lastModified">Last Updated: October 5th, 2016</p>
 			</section>
 		<div>
 	</main>
